# JAD2Green

./: .env.example  .gitignore  AUDIT.md  BUILD_PLAN.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  HANDOVER.md  HARDENING_CHECKLIST.md  PROGRESS.md  SECURITY.md  TODOLIST.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: adrar-build.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/adrar_api/: __init__.py  config.py  deps.py  main.py
apps/api/src/adrar_api/models/: requests.py  responses.py
apps/api/src/adrar_api/routers/: activity.py  anomalies.py  compute.py  documents.py  factor_sets.py  intensity.py  projects.py  reports.py  rse.py
apps/api/src/adrar_api/services/: compute_svc.py
apps/api/tests/: conftest.py  test_api.py  test_hardening.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/app/projects/[projectId]/: page.tsx
apps/web/src/lib/: api.ts  supabase.ts  types.ts
apps/web/tests/: test_ui_invariants.mjs
apps/worker/: .dockerignore  Dockerfile  pyproject.toml
apps/worker/src/adrar_worker/: __init__.py  celery_app.py
apps/worker/src/adrar_worker/parsers/: aliyun_dashscope.py  base.py  pdf_parser.py  scan_parser.py  xlsx_parser.py
apps/worker/src/adrar_worker/report/: charts.py  delivery.py  narrative.py  renderer.py
apps/worker/src/adrar_worker/tasks/: generate_report.py  ingest.py
apps/worker/tests/: test_ingestion.py  test_report.py
scripts/: backup.sh  healthcheck.sh  restore.sh  setup-hetzner.sh
supabase/migrations/: 20240101000001_schema.sql  20240101000002_rls.sql  20240101000003_documents.sql  20240101000004_hardening.sql  20240101000005_morocco_enhancement.sql  20240101000006_intensity_rse.sql
supabase/seed/: 001_bilan_carbone_fy2024.sql
supabase/tests/: test_rls_adversarial.py
