[project]
name = "adrar-api"
version = "0.1.0"
description = "Adrar AI — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "supabase>=2.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "adrar-kernel",
    "psycopg2-binary>=2.9",
    "sqlparse>=0.5",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "sqlparse>=0.5",
    "testing.postgresql>=1.3",
    "python-jose[cryptography]>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrar_api"]

[tool.uv.sources]
adrar-kernel = { workspace = true }
