[project]
name = "adrar-worker"
version = "0.1.0"
description = "Adrar AI — Celery worker (document ingestion + report generation)"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "adrar-kernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrar_worker"]
