[project]
name = "adrar-worker"
version = "0.1.0"
description = "Adrar AI — Celery worker (document ingestion + report generation)"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "adrar-kernel",
    # LLM providers — all optional, loaded lazily
    "google-generativeai>=0.8",   # Gemini 2.5 Flash Lite / 3.1 Flash Lite
    "openai>=1.30",               # OpenRouter (Qwen3.7-Plus, DeepSeek V4 Pro)
    "anthropic>=0.28",            # legacy fallback
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrar_worker"]

[tool.uv.sources]
adrar-kernel = { workspace = true }
