[project]
name = "adrar-worker"
version = "0.1.0"
description = "Adrar AI — Celery worker (document ingestion + report generation)"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "adrar-kernel",
    "openai>=1.30",               # OpenRouter (Qwen3-Plus, DeepSeek V3, GLM-4-Plus)
    "dashscope>=1.14",            # Aliyun DashScope (PaddleOCR-VL-1.5)
    "google-generativeai>=0.8",   # Gemini 2.5 Flash Lite (cost safety net)
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.28.0",
    "pdfplumber>=0.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adrar_worker"]

[tool.uv.sources]
adrar-kernel = { workspace = true }
